force-app/main/default/objects/Match__c/fields/Away_Team__c.field-meta.xml
<CustomField>
    <fullName>Away_Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Away Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches (Away Team)</relationshipLabel>
    <relationshipName>Matches_Away</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>