force-app/main/default/objects/Match__c/fields/Away_Team_Goals__c.field-meta.xml
<CustomField>
    <fullName>Away_Team_Goals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Away Team Goals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>