force-app/main/default/objects/Match__c/fields/Bracket__c.field-meta.xml
<CustomField>
    <fullName>Bracket__c</fullName>
    <label>Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>