force-app/main/default/objects/Match__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tournament_Group</valueSetName>
    </valueSet>
</CustomField>