force-app/main/default/objects/Match__c/fields/Home_Team_Goals__c.field-meta.xml
<CustomField>
    <fullName>Home_Team_Goals__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Home Team Goals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>