force-app/main/default/objects/Match__c/fields/Linked_Match__c.field-meta.xml
<CustomField>
    <fullName>Linked_Match__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Match</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Tournament__c</field>
            <operation>equals</operation>
            <valueField>Match__c.Tournament__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Match__c</referenceTo>
    <relationshipLabel>Linked Matches</relationshipLabel>
    <relationshipName>Linked_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>