force-app/main/default/objects/Match__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Stage - Round 1</fullName>
            </value>
            <value>
                <fullName>Group Stage - Round 2</fullName>
            </value>
            <value>
                <fullName>Group Stage - Round 3</fullName>
            </value>
            <value>
                <fullName>Knockout Stage - Round of 16</fullName>
            </value>
            <value>
                <fullName>Knockout Stage - Quarter-finals</fullName>
            </value>
            <value>
                <fullName>Knockout Stage - Semi-finals</fullName>
            </value>
            <value>
                <fullName>Knockout Stage - Third place</fullName>
            </value>
            <value>
                <fullName>Knockout Stage - Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>