force-app/main/default/objects/Match__c/fields/Winner_Team__c.field-meta.xml
<CustomField>
    <fullName>Winner_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner Team</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Team__c.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Home_Team__c</valueField>
        </filterItems>
        <filterItems>
            <field>Team__c.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Away_Team__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches (Winner Team)</relationshipLabel>
    <relationshipName>Matches_Won</relationshipName>
    <type>Lookup</type>
</CustomField>