force-app/main/default/objects/Match__c/validationRules/Check_Draw_On_Knockout_Stage_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Draw_On_Knockout_Stage_Match</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    CONTAINS(TEXT(Stage__c), &quot;Knockout Stage&quot;),
    Draw__c
)</errorConditionFormula>
    <errorDisplayField>Draw__c</errorDisplayField>
    <errorMessage
  >Knockout stage matches cannot be concluded with a draw.</errorMessage>
</ValidationRule>