force-app/main/default/objects/Match__c/validationRules/Check_Winner_Team_on_KO_Stage_Matches.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Winner_Team_on_KO_Stage_Matches</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   CONTAINS(TEXT(Stage__c), &quot;Knockout Stage&quot;),
   Home_Team_Goals__c =  Away_Team_Goals__c,
   ISNULL( Winner_Team__c ) 
)</errorConditionFormula>
    <errorMessage>A winner team should be selected.</errorMessage>
</ValidationRule>